Update refs and image credits

--- a/tareaCorta2.tex
+++ b/tareaCorta2.tex
@@ -494,7 +494,7 @@ De manera similar al siguiente gráfico:
 \begin{center}
   \begin{figure}[h!]
   \includegraphics[width=60mm]{Eratostenes.jpg}
-  \caption{Cálculo realizado por Eratóstenes.}
+  \caption{Cálculo realizado por Eratóstenes. \emph{Tomado de Google Imágenes}}
   \end{figure}
 \end{center}
 
@@ -542,700 +542,14 @@ indicando que el material restante se había incorporado al interior de las céu
 Con este experimento demostraron que Avery estaba en lo correcto y que el componente de la herencia genética
 es en realidad el ADN y no las proteínas como se creía.
 
-Por esta serie de experimentos Hershey recibe el premio Nobel en 1969.
+Por esta serie de experimentos Hershey recibe el premio Nobel en 1969.\cite{hernandez_2019}
 \begin{center}
   \begin{figure}[h!]
   \includegraphics[width=60mm]{hershey.jpg}
-  \caption{Experimento Hershey-Chase .}
+  \caption{Experimento Hershey-Chase. \emph{Tomado de Google Imágenes}}
   \end{figure}
 \end{center}
-%************************Manejo de Texto **************************************/
-\section{Manejo de Texto}
-\subsection{Manejo de párrafos}
-\LaTeX\xspace  permite un manejo fluido y natural de los párrafos, por lo que simplemente basta con dejar una línea en blanco entre el texto y automáticamente se va a crear un nuevo párrafo en el documento.
-
-\begin{center}
-\begin{verbatim}
   
-    Lorem ipsum dolor adipiscing elit, 
-    mattis pharetra curabitur.
-    
-    Dapibus egestas blandit dictumst.
-\end{verbatim}
-\end{center}
-
-
-El ejemplo anterior produce el siguiente texto con la clara división entre párrafos.
-\begin{center}
-  Lorem ipsum dolor adipiscing elit, 
-  mattis pharetra curabitur.
-  
-  Dapibus egestas blandit dictumst.
-\end{center}
-Otra manera de generar párrafos en \LaTeX\xspace  es hacer uso del comando \textbackslash{}par.
-Simplemente se coloca en el texto donde se quiere generar un nuevo párrafo.
-\subsubsection{Alineación de párrafos}
-Existen comandos útiles para definir la alineación del texto de un párrafo:
-\begin{itemize}
-  \item \textbackslash{}center: Para alinear al centro.
-  \item \textbackslash{}flushleft: Alinea a la izquierda.
-  \item \textbackslash{}flushright: Alinea a la derecha.
-\end{itemize}
-
-\subsubsection{Identación}
-
-Por defecto \LaTeX\xspace  no hace identación del primer párrafo de una sección o capítulo.
-La identación de los demás párrafos está definida por el valor definido usando \textbackslash{}parindent
-Por ejemplo:
-\begin{center}
-  \begin{verbatim}
-  \documentclass{article} 
-  \setlength{\parindent}{4em} 
-  \begin{document}
-    ...
-  \end{document}
-  \end{verbatim}
-\end{center}
-
-\subsubsection{Espaciado entre líneas}
-Para definir un valor diferente al por defecto para el espaciado entre las líneas de un párrafo se utiliza el comando:
-\begin{center}
-  \begin{verbatim}
-    \renewcommand{\baselinestretch}{1.5}
-  \end{verbatim}  
-\end{center}
-
-\subsubsection{Efectos de letra}
-\LaTeX\xspace  permite aplicar efectos al texto para enfatizar conceptos y palabras clave que deseamos resaltar. El emplear estos efectos de manera apropiada permite que los lectores encuentren nuestro artículo más fácil de comprender.
-Para aplicar texto en cursiva empleamos el comando \textbackslash{}\textbf{\textit{textit}}\{Texto en cursiva\}, lo que produce:
-\textit{Texto en cursiva}.
-
-Para subrayar el texto el comando empleado es  \textbackslash{}\textbf{\textit{underline}}\{Texto subrayado\}, 
-lo que se puede ver como: \underline{Texto subrayado}.
-
-Para poder enfatizar utilizando el efecto de negrita en las letras de una palabra o frase se emplea el comando \textbackslash{}\textbf{textbf}\{Texto en negrita\}.
-
-Otro mecanismo de énfasis para el texto es el comando  \textbackslash{}\textbf{\textit{emph}}\{Texto enfatizado\}, este comando permite entre otras cosas resaltar el texto sin importar el 
-formato original del párrafo por lo que si se encontraba en un texto en cursiva provoca el efecto contrario para mantener el énfasis de la frase deseada. Por ejemplo:
-
-\textit{Este texto está en cursiva y \emph{este otro está enfatizado}}.
-
-\LaTeX\xspace  también permite cambiar el tamaño del texto para lo cual tenemos los siguientes comandos:
-
-\begin{center}
-  \begin{tabular}[t]{|m{3cm}|m{3cm}|}
-    \hline
-    \textbackslash{}tiny\{A\} & \tiny{A} \\ \hline
-    \textbackslash{}scriptsize\{A\} & \scriptsize{A} \\ \hline
-    \textbackslash{}small\{A\} & \small{A} \\ \hline
-    \textbackslash{}normalsize\{A\} & \normalsize{A} \\ \hline
-    \textbackslash{}large\{A\} & \large{A} \\ \hline
-    \textbackslash{}huge\{A\} & \huge{A} \\ \hline
-  \end{tabular}  
-\end{center}
-
-\subsubsection{Manejo de tildes}
-Los acentos suelen generar problemas cuando se trabaja colaborativamente en un documento, debido a que distintos usuarios
-emplean sistemas operativos distintos, con configuraciones locales distintas y diferentes codificaciones de texto. Es por esto  que para tildar 
-letras y aplicar acentos se recomienda utilizar el comando \textbackslash{}'A para producir \'A.
-
-\subsubsection{Títulos}
-
-Para establecer el título del documento se usa el comando \emph{\textbackslash{}title}\{Titulo del Documento\}.
-También existen comandos para los títulos de secciones intermedias del documento como \emph{\textbackslash{}chapter} para 
-iniciar un nuevo capítulo, o el comando \emph{\textbackslash{}section} para establecer una nueva sección.
-
-\subsubsection{Manejo de referencias}
-
-\LaTeX\xspace  ofrece un soporte completo para el manejo de referencias
-y citas en el texto, ya que son una parte fundamental en la producción de textos científicos.
-Para el manejo de referencias se puede utilizar el comando \emph{\textbackslash{}begin\{thebibliography\}} 
-\begin{center}
-\small{
-\begin{verbatim}
-  \begin{thebibliography}{1}
-
-    \bibitem{IEEEhowto:kopka}
-    H.~Kopka and P.~W. Daly, 
-    \emph{A Guide to \LaTeX\xspace },
-    3rd~ed.\hskip 1em plus 
-    0.5em minus 0.4em\relax Harlow,
-    England: Addison-Wesley, 1999.
-    
-    \end{thebibliography}
-\end{verbatim}}
-\end{center}
-
-Otra manera de crear referencias en un documento es utilizando la herramienta BibTeX que permite crear un 
-archivo externo con todas las referencias del documento y simplemente agregar las citas necesarias cuando estas sean requeridas.
-
-Para realizar una cita bibliográfica se emplea el comando \emph{\textbackslash{}cite} con la etiqueta que identifica de manera única a la entrada
-de las referencias a la que queremos citar.
-
-\subsubsection{Marcas de agua}
-Existe un paquete para \LaTeX\xspace  que permite la creación de marcas de agua en el documento \cite{callegar_2015}.
-Al usar dicho paquete tenemos las opciones:
-\begin{itemize}
-\item \emph{\textbackslash{}SetWatermarkText\{Texto\}:} Permite definir el texto de la marca de agua.   
-\item \emph{\textbackslash{}SetWatermarkFontSize\{tamaño\}:} Permite definir el tamaño de la fuente de la marca de agua.
-\item \emph{\textbackslash{}SetWatermarkAngle\{ánguloº\}:} Establece el ángulo de la marca de agua, por defecto 45º.   
-   
-  
-\end{itemize}
-
-\subsubsection{Headers y Footers}
-También existen paquetes que se pueden emplear para configurar la apariencia de los encabezados y pies de página del documento que estamos creando.
-Uno de esos paquetes es el \emph{fancyhdr} \cite{oostrum_2019}.
-Para incluir el paquete en nuestro documento simplemente empleamos la sentencia:
-\begin{center}
-  \emph{\textbackslash{}usepackage\{fancyhdr\}}
-\end{center}
-
-\subsubsection{Manejo de saltos de página}
-Evidentemente existen comandos que nos permiten entre otras cosas cambiar de página de manera abrupta e insertar nuevas líneas cuando sean necesarias.
-Para crear un salto de página existen dos comandos principales:
-\begin{itemize}
-  \item \emph{\textbackslash{}clearpage:} Con el comando clearpage si existen elementos flotantes como tablas o figuras, estas se insertarán todas al iniciar la nueva página.
-  \item \emph{\textbackslash{}newpage:} Si usamos este comando los elementos serán colocados siguiendo el flujo normal del texto.
-\end{itemize}   
-Para crear un salto de línea se utilizan los comandos.
-\begin{itemize}
-  \item \textbackslash{}\textbackslash{}
-  \item \textbackslash{}newline
-  \item  \textbackslash{} hfill \textbackslash{}break
-\end{itemize}
-Todos funcionan de la misma manera.
-
-\subsubsection{Manejo de Columnas}
-Para escribir texto en una o varias columnas se puede emplear el paquete \emph{multicol}, Para lo cual simplemente se agrega como parte del documento utilizando:
-\begin{center}
-  \emph{\textbackslash{}usepackage\{multicol\}}
-\end{center}
-Antes de empezar el texto que se desea dividir en columnas entonces se declara la sentencia:
-
-\begin{center}
-  \emph{\textbackslash{}begin\{multicols\}\{número de columnas\}} \\
-  Texto dividido en columnas \\
-  \emph{\textbackslash{}end\{multicols\}}
-\end{center}
-
-\subsubsection{Manejo de Quotes}
-Para agregar un nuevo quote que refleje una frase importante se emplea el comando \emph{\textbackslash{}begin\{quote\}}.
-Como por ejemplo:
-\begin{center}
-  \begin{quote}
-    "The good thing about science is that it's true whether or not you believe in it"
-    --Neil deGrasse Tyson
-  \end{quote}  
-\end{center}
-
-
-
-%************\item \textbackslash{}center: Para alinear al centreo.*********TABLAS*******************tion{Tablas}
-\section{ Manejo de Tablas}
-Las tablas son elementos muy útiles y comúnmente utilizados en artículos científicos para presentar
-un resumen de los resultados obtenidos.
-\LaTeX\xspace  permite construir tablas básicas de manera relativamente sencilla con el uso de paquetes como tabu, longtable, tabularx entre otros.
-La manera más básica de definir una nueva tabla es utilizando el ambiente \textbf{\textit{tabular}}
-\begin{verbatim}
-  \begin{tabular}[pos]{cols}
-    table content
-  \end{tabular}
-\end{verbatim}  
-\begin{itemize}
-  \item \textbf{\textit{pos}} hace referencia a la posición vertical de la tabla y puede tomar los siguientes valores:
-\end{itemize}
-\begin{center}
-  \begin{tabular}[t]{|c|p{5cm}|}
-    \hline
-    t & Se alinea con la base del texto. \\ \hline
-    b & Se alinea con respecto a la fila inferior de la tabla. \\ \hline
-    c (default) & Se alinea al centro. \\ \hline
-  \end{tabular}
-\end{center}
-\begin{itemize}
-  \item \textbf{\textit{cols}} nos permite definir la cantidad y apariencia de las columnas de la tabla, el número total de columnas no es necesario ya que se infiere de la cantidad de argumentos utilizados en el objeto \textit{cols}. Se permiten los siguientes valores: 
-\end{itemize}
-\begin{center}
-  \begin{tabular}[t]{|c|m{5cm}|}
-    \hline
-    l & La columna se justifica a la izquierda. \\ \hline
-    c & El contenido aparece centrado en la columna. \\ \hline
-    r & La columna se justifica a la derecha. \\ \hline
-    p{'ancho'} & Columna de párrafo con el texto alineado hacia arriba. \\ \hline
-    m{'ancho'} & Columna de párrafo con el texto alineado al centro. \\ \hline
-    b{'ancho'} & Columna de párrafo con el texto alineado hacia abajo. \\ \hline
-    $\vert$ & Se dibuja una línea vertical entre las columnas. \\ \hline
-    $\Vert$ & Se dibuja una doble-línea vertical entre las columnas. \\ \hline
-  \end{tabular}
-\end{center}
-Adicionalmente dentro de la especificación de cada columna se pueden emplear estos símbolos:
-\begin{center}
-  \begin{tabular}[t]{|c|m{5cm}|}
-    \hline
-    \& & Sirve de separador entre cada columna \\ \hline
-    \textbackslash{}\textbackslash{} & Crea una nueva fila. \\ \hline
-    \textbackslash{}hline & Crea una línea horizontal entre las filas. \\ \hline
-    \textbackslash{}newline & Crea una línea dentro de la misma celda. \\ \hline
-    \textbackslash{}cline\{i-j\} & Línea horizontal parcial empezando en la columna \textit{i} y terminando en la columna \textit{j}. \\ \hline
-    \end{tabular}
-\end{center}
-\hfill \break
-
-%\hfill mds
- 
-%\hfill August 26, 2015
-
-%\subsection{Subsection Heading Here}
-%Subsection text here.
-
-% needed in second column of first page if using \IEEEpubid
-%\IEEEpubidadjcol
-
-% \subsubsection{Subsubsection Heading Here}
-% Subsubsection text here.
-
-
-% An example of a floating figure using the graphicx package.
-% Note that \label must occur AFTER (or within) \caption.
-% For figures, \caption should occur after the \includegraphics.
-% Note that IEEEtran v1.7 and later has special internal code that
-% is designed to preserve the operation of \label within \caption
-% even when the captionsoff option is in effect. However, because
-% of issues like this, it may be the safest practice to put all your
-% \label just after \caption rather than within \caption{}.
-%
-% Reminder: the "draftcls" or "draftclsnofoot", not "draft", class
-% option should be used if it is desired that the figures are to be
-% displayed while in draft mode.
-%
-%\begin{figure}[!t]
-%\centering
-%\includegraphics[width=2.5in]{myfigure}
-% where an .eps filename suffix will be assumed under latex, 
-% and a .pdf suffix will be assumed for pdflatex; or what has been declared
-% via \DeclareGraphicsExtensions.
-%\caption{Simulation results for the network.}
-%\label{fig_sim}
-%\end{figure}
-
-% Note that the IEEE typically puts floats only at the top, even when this
-% results in a large percentage of a column being occupied by floats.
-
-
-% An example of a double column floating figure using two subfigures.
-% (The subfig.sty package must be loaded for this to work.)
-% The subfigure \label commands are set within each subfloat command,
-% and the \label for the overall figure must come after \caption.
-% \hfil is used as a separator to get equal spacing.
-% Watch out that the combined width of all the subfigures on a 
-% line do not exceed the text width or a line break will occur.
-%
-%\begin{figure*}[!t]
-%\centering
-%\subfloat[Case I]{\includegraphics[width=2.5in]{box}%
-%\label{fig_first_case}}
-%\hfil
-%\subfloat[Case II]{\includegraphics[width=2.5in]{box}%
-%\label{fig_second_case}}
-%\caption{Simulation results for the network.}
-%\label{fig_sim}
-%\end{figure*}
-%
-% Note that often IEEE papers with subfigures do not employ subfigure
-% captions (using the optional argument to \subfloat[]), but instead will
-% reference/describe all of them (a), (b), etc., within the main caption.
-% Be aware that for subfig.sty to generate the (a), (b), etc., subfigure
-% labels, the optional argument to \subfloat must be present. If a
-% subcaption is not desired, just leave its contents blank,
-% e.g., \subfloat[].
-
-
-% An example of a floating table. Note that, for IEEE style tables, the
-% \caption command should come BEFORE the table and, given that table
-% captions serve much like titles, are usually capitalized except for words
-% such as a, an, and, as, at, but, by, for, in, nor, of, on, or, the, to
-% and up, which are usually not capitalized unless they are the first or
-% last word of the caption. Table text will default to \footnotesize as
-% the IEEE normally uses this smaller font for tables.
-% The \label must come after \caption as always.
-%
-%\begin{table}[!t]
-%% increase table row spacing, adjust to taste
-%\renewcommand{\arraystretch}{1.3}
-% if using array.sty, it might be a good idea to tweak the value of
-% \extrarowheight as needed to properly center the text within the cells
-%\caption{An Example of a Table}
-%\label{table_example}
-%\centering
-%% Some packages, such as MDW tools, offer better commands for making tables
-%% than the plain LaTeX2e tabular which is used here.
-%\begin{tabular}{|c||c|}
-%\hline
-%One & Two\\
-%\hline
-%Three & Four\\
-%\hline
-%\end{tabular}
-%\end{table}
-
-
-% Note that the IEEE does not put floats in the very first column
-% - or typically anywhere on the first page for that matter. Also,
-% in-text middle ("here") positioning is typically not used, but it
-% is allowed and encouraged for Computer Society conferences (but
-% not Computer Society journals). Most IEEE journals/conferences use
-% top floats exclusively. 
-% Note that, LaTeX2e, unlike IEEE journals/conferences, places
-% footnotes above bottom floats. This can be corrected via the
-% \fnbelowfloat command of the stfloats package.
-
-
-
-
-
-
-
-
-%******************************* Manejo de Figuras y Gráficos **************************************/
-\section{ Manejo de Figuras y Gráficos }
-Cuando se quieren insertar figuras, subfiguras o gráficos en un PDF construido y compilado con Latex, son necesarios un par de componentes principales.
-\begin{itemize}
-  \item \textbf{\textit{Paquete graphicx: }} Latex no tiene la capacidad de manipular imágenes por sí mismo, es por esa razón que se debe importar el paquete graphicx.
-\end{itemize}
-\begin{itemize}
-  \item \textbf{\textit{Paquete subfigure: }} Del mismo modo si se requiere hacer inserciones de subfiguras se debe importar el paquete subfigure.
-\end{itemize}
-\begin{itemize}
-  \item \textbf{\textit{Comando includegraphics:}} Este comando incluye dos parámetros principales, la ruta de la imagen la cual es obligatoria, así como una serie de opciones no obligatorias las cuales se explican a continuación. 
-
-   Los comandos para insertar figuras y subfiguras se escribe de esta manera respectivamente:
-  \hfill \break
-  \begin{center}
-    \emph{\textbackslash{}includegraphics[opciones]\{ruta de imagen\}}
-  \end{center}
-  \begin{center}
-    \emph{\textbackslash{}subfigure\emph{\textbackslash{}includegraphics[opciones]\{ruta de imagen\}}}
-  \end{center}
-\end{itemize}
-\hfill \break
-La siguiente tabla muestra las opciones disponibles a la hora de insertar una figura, dichas opciones son parámetros del comando includegraphics.
-\begin{center}
-  \begin{tabular}[t]{|c|p{5cm}|}
-    \hline
-    width=xx & Ancho de la figura en xx. \\ \hline
-    height=xx & Altura de la figura en xx. \\ \hline
-    keepaspectratio & Si se encuentra en true, escala la imagen de acuerdo a lo especificado sin distorsionar la imagen. \\ \hline
-    scale=xx & Escala la imagen al factor indicado. Un 0.5 la reduce a la mitad, un 2 la duplica. \\ \hline
-    angle=xx & Rota la imagen xx grados en sentido contrario a las agujas del reloj. \\ \hline
-    trim=l b r t & Recorta la imagen l por la izquierda, b por abajo, r por la derecha y t por arriba. \\ \hline
-    clip & Para que la opción de trim funcione, clip debe estar en true. \\ \hline
-    page=x & Si la imagen es un pdf con varias páginas, permite utilizar una página distinta a la primera. \\ \hline
-  \end{tabular}
-\end{center}
-\begin{center}
-  \includegraphics{chip.JPG}
-\end{center}
-Esta figura muestra un ejemplo de una imagen insertada con el comando includegraphics.
-\hfill \break
-\begin{figure}[htbp]
-  \centering
-  \subfigure[Ejemplo 1]{\includegraphics[width=40mm]{ciencia1.JPG}}
-  \subfigure[Ejemplo 2]{\includegraphics[width=40mm]{ciencia2.JPG}}
-  \subfigure[Ejemplo 3]{\includegraphics[width=80mm]{ciencia3.JPG}}
-\end{figure}
-Estas tres imágenes muestran un ejemplo de subfiguras insertadas con el comando subfigure, utilizando el parámetro opcional de width, donde se establecen 40mm, 40mm y 80mm de ancho respectivamente.
-\hfill \break
-
-
-
-
-
-%*************************** Manejo de Figuras al lado de tablas (minipage) *****************************/
-\section{Manejo de Figuras (Minipage)}
-El entorno minipage es utilizado en Latex para cuando se requiera poner dos figuras una al lado de la otra. El nombre minipage se refiere a que se crea una caja que actúa como minicaja, es una miniversión que se inserta dentro de una página. Los comandos necesarios para crear un entorno de minipage se muestra con el siguiente ejemplo.
-
-\begin{verbatim}
-  \begin{minipage}}[pos1][long2][pos2]{long1}
-    texto
-  \end{minipage}
-\end{verbatim}
-
-La siguiente tabla explica cada uno de los parámetros del comando minipage.
-\begin{center}
-  \begin{tabular}[t]{|c|m{5cm}|}
-    \hline
-    long1 & Este es el único parámetro obligatorio, es el que indica el ancho. \\ \hline
-    pos1 & Este parámetro determina la alineación de la caja con respecto al contexto al que se encuentra. \\ \hline
-    long2 & Este parámetro determina la altura de la caja. \\ \hline
-    pos2 & Este parámetro determina donde se va a colocar el texto dentro de la caja. \\ \hline
-  \end{tabular}
-\end{center}
-\hfill \break
-
-\begin{minipage}[t]{0.2\textwidth}
-\includegraphics[width=\textwidth]{ciencia4.JPG}
-\end{minipage}
-\begin{minipage}[t]{0.2\textwidth}
-\includegraphics[width=\textwidth]{ciencia5.JPG}
-\end{minipage}
-
-Las imágenes anteriores muestran un ejemplo de minipage, donde se puede visualizar una imagen junto a la otra, ambas dentro de una caja.
-\hfill \break
-
-
-
-
-
-%***************************** Manejo de Ecuaciones Matemáticas ***********************************/
-\section{ Ecuaciones Matemáticas }
-Una de las principales razones por las cuales \LaTeX\xspace tiene tanta flexibilidad a la hora de crear archivos PDFs, es por el manejo de las ecuaciones matemáticas, de otras maneras puede ser complicado tratar de crear un PDF con tantos símbolos matemáticos.
-
-\begin{itemize}
-  \item \textbf{\textit{Ecuaciones: }} Se pueden insertar ecuaciones utilizando un signo de dólar \$. Se puede utilizar para insertar símbolos matemáticos en una oración, por ejemplo $1+2=3$.
-Si se desea se pueden utilizar dos signos de dólar \$\$ para mostrar una ecuación en una línea propia. Por ejemplo $$1+2=3$$
-Del mismo modo se pueden enumerar las ecuaciones para tener alguna referencia, para eso se deben incluir los siguientes comandos, se muestra un ejemplo del resultado con la numeración de cuatro ecuaciones.
-  \begin{center}
-    \begin{verbatim}
-      \begin{equation} 
-        Ecuación ...
-      \end{equation}
-    \end{verbatim}
-  \end{center}
-  \begin{equation}
-    1+2=3
-  \end{equation}
-  \begin{equation}
-    5-1=4
-  \end{equation}
-  \begin{equation}
-    3*3=9
-  \end{equation}
-  \begin{equation}
-    12/4=3
-  \end{equation}
-
-  \LaTeX\xspace también permite tener una ecuación matemática con todos sus pasos en una línea por cada paso. A continuación se muestra cual es el comando necesario para lograrlo y un ejemplo de como se ve implementado en el archivo PDF. Se puede incluir el * para indicarle al comando eqnarray que no es necesario que enumere la ecuación, el comando para esto es el siguiente.
-  \begin{center}
-    \begin{verbatim}
-      \begin{equation*} 
-        Ecuación ...
-      \end{equation*}
-    \end{verbatim}
-  \end{center}
-  \begin{eqnarray*}
-    a & = & b + c \\
-    & = & y - z
-  \end{eqnarray*}
-\end{itemize} % Fin de item Ecuaciones
-
-\begin{itemize}
-  \item \textbf{\textit{Símbolos: }} Cuando se requiera insertar símbolos conocidos como +, -, =, !, /, (), [], : y demás, es necesario utilizar un comando. A continuación se muestran una serie de secciones las cuales muestran como hacer inserciones de 'potencias e índices', 'fracciones', 'raíces', 'sumatorias e integrales' y 'letras griegas'.
-
-\subsection{Potencias}
-Las potencias se insertan utilizando el símbolo \^{}. Ejemplos pueden ser: $n^5$, $y^2$, $x^3$.
-
-\subsection{Índices}
-Los índices se insertan utilizando el símbolo \_. Ejemplos pueden ser $4_i$, $3_y$, $5_p$. En caso de que los índices requieran más de un caracter, se pueden encerrar entre \{\}, por ejemplo $b_{a-8}$.
-
-\subsection{Fracciones}
-Las fracciones se insertan utilizando el comando:
-  \begin{center}
-    \begin{verbatim}
-      $$\frac{numerador}{denominador}$$ 
-    \end{verbatim}
-  \end{center}
-Ejemplos de fracciones pueden ser los siguientes: $$\frac{a-b}{6}$$ 
-
-\subsection{Raíces}
-Las raíces se insertan utilizando el comando \textbackslash{}sqrt\{...\} donde ... se reemplaza por el contenido de la raíz que se quiera insertar. Se pueden utilizar los paréntesis cuadrados [] para incluir la magnitud de la raíz. Se muestran los comandos con ejemplos respectivos.
-  \begin{center}
-    \begin{verbatim}
-      $$\sqrt{y^4} $$
-      $$\sqrt[x]{y^4} $$
-      $$\sqrt[x]{(a-b)^4}$$ 
-      $$\sqrt[x]{(a-b)^2-i}$$
-      $$\sqrt[x]{(t-2)^3-u}$$
-    \end{verbatim}
-  \end{center}
-Ejemplos de los comandos son los siguientes.
-      $$\sqrt{y^4}$$ 
-      $$\sqrt[x]{y^4}$$ 
-      $$\sqrt[x]{(a-b)^4}$$ 
-      $$\sqrt[x]{(a-b)^2-i}$$ 
-      $$\sqrt[x]{(t-2)^3-u}$$ 
-
-\subsection{Sumatorias}
-Para insertar el símbolo de una sumatoria en \LaTeX\xspace se tiene que utilizar el comando \textbackslash{}sum, el límite superior de la sumatoria se indica con el sombrero \^{} y el límite inferior se indica con \_. Los siguientes comandos muestran como insertar una sumatoria.
-  \begin{center}
-    \begin{verbatim}
-      $$\sum_{p=3}^7 t^x$$
-      $$\sum_{b=0}^2 p^x-1$$
-    \end{verbatim}
-  \end{center}
-El resultado de dichos comandos son los siguientes respectivamente:
-  \begin{center}
-     $$\sum_{p=3}^7 t^x$$
-     $$\sum_{b=0}^2 p^x-1$$
-  \end{center}
-
-\subsection{Integrales}
-Para insertar el símbolo de una integral en \LaTeX\xspace se tiene que utilizar el comando \textbackslash{}int, el límite superior de la integral se indica con el sombrero \^{} y el límite inferior se indica con \_. El siguiente comando muestra como insertar una integral.
-  \begin{center}
-    \begin{verbatim}
-      $$\int_y^x f(x)$$
-    \end{verbatim}
-  \end{center}
-El resultado de dicho comando es el siguiente:
-$$\int_y^x f(x)$$
-
-\subsection{Letras Griegas}
-\LaTeX\xspace también permite la inserción de letras griegas, las cuales se insertan utilizando el nombre de la letra anteponiendo un 'backslash'. Ejemplos de como aplicar dichas letras se pueden ver a continuación.
-   \begin{verbatim}
-      $\alpha$
-      $\beta$
-      $\delta, \Delta$
-      $\theta, \Theta$
-      $\mu$
-      $\pi, \Pi$
-      $\sigma, \Sigma$
-      $\phi, \Phi$
-      $\psi, \Psi$
-      $\omega, \Omega$
-   \end{verbatim}
-Los resultados de los comandos anteriores para inserciones de letras griegas se muestran a continuación. \\
-\\
-      $\alpha$
-      $\beta$
-      $\delta, \Delta$
-      $\theta, \Theta$
-      $\mu$
-      $\pi, \Pi$
-      $\sigma, \Sigma$
-      $\phi, \Phi$
-      $\psi, \Psi$
-      $\omega, \Omega$
-\end{itemize}
-\hfill \break
-
-
-
-
-
-
-%***************************** Manejo de Colores ***********************************/
-\section{ Manejo de Colores }
-Para el manejo de colores en \LaTeX\xspace, se debe importar el paquete color, a la vez existen dos comandos principales para dicho propósito.
-\begin{itemize}
-  \item \textbf{\textit{textcolor\{NombreColor\}\{Texto\} }}
-\end{itemize}
-\begin{itemize}
-  \item \textbf{\textit{color\{NombreColor\} }}
-\end{itemize}
-
-\subsection{Cambiar color de fuentes }
-Para utilizar la paleta básica de colores con el comando textcolor se requiere indicar entre \{\} el color que se requiere y posteriormente también entre \{\} el texto que se quiere visualizar con dicho color especificado, a continuación se muestran los comandos para ejemplos de textos utilizando paletas de colores azul, rojo, verde, amarillo, negro y cyan.
-\begin{center}
-  \begin{verbatim}
-    \textcolor{blue}{texto}
-    \textcolor{red}{texto}
-    \textcolor{green}{texto}
-    \textcolor{yellow}{texto}
-    \textcolor{black}{texto}
-    \textcolor{cyan}{texto}
-  \end{verbatim}
-\end{center}
-El resultado de implementar dichos colores es el siguiente:
-\begin{center}
-   \textcolor{blue}{Esto es un texto utilizando color azul!} \\
-   \textcolor{red}{Esto es un texto utilizando color rojo!} \\
-   \textcolor{green}{Esto es un texto utilizando color verde!} \\
-   \textcolor{yellow}{Esto es un texto utilizando color amarillo!} \\
-   \textcolor{black}{Esto es un texto utilizando color negro!} \\
-   \textcolor{cyan}{Esto es un texto utilizando color cyan!} \\
-\end{center}
-
-% Modelos de colores
-\subsection{Modelos de colores}
-Se pueden utilizar los siguientes tres modelos cuando se requiera personalizar los colores requeridos para los textos.
-\begin{itemize}
-  \item \textbf{\textit{ rgb (Red Green Blue): }} este modelo utiliza como colores primarios el rojo, verde y azul, para identificar el color requerido utilizando este modelo se deben especificar tres números comprendidos entre el 0 y 1.
-\end{itemize}
-\begin{itemize}
-  \item \textbf{\textit{ cmyk (Cyan Magenta Yellow Black): }} este modelo requiere que se especifiquen cuatro números comprendidos entre 0 y 1, especificando para cada uno de los colores del cmyk la combinación requerida. Este método es conocido por ser el utilizado en las impresoras.
-\end{itemize}
-\begin{itemize}
-  \item \textbf{\textit{ gray: }} este modelo utiliza una escala de grises, indicando un número único comprendido entre 0 y 1.
-\end{itemize}
-
-\hfill \break
-Se pueden hacer combinaciones de colores utilizando los modelos anteriormente mencionados, a continuación se muestran los comandos necesarios para poder hacer uso de los modelos.
-\begin{center}
-  \begin{verbatim}
-    \textcolor[rgb]{1,0,0}{Rojo}
-    \textcolor[rgb]{1,1,0}{Amarillo}
-    \textcolor[rgb]{0.2,0.5,0.7}{Azulado}
-    \textcolor[cmyk]{0,1,0,0}{Magenta}
-    \textcolor[cmyk]{1,0,1,0}{Verde}
-    \textcolor[gray]{0.3}{Gris Oscuro}
-    \textcolor[gray]{0.7}{Gris Claro}
-  \end{verbatim}
-\end{center}
-El resultado de implementar dichos colores es el siguiente:
-\begin{center}
-    \textcolor[rgb]{1,0,0}{Rojo}\\
-    \textcolor[rgb]{1,1,0}{Amarillo}\\
-    \textcolor[rgb]{0.2,0.5,0.7}{Azulado}\\
-    \textcolor[cmyk]{0,1,0,0}{Magenta}\\
-    \textcolor[cmyk]{1,0,1,0}{Verde}\\
-    \textcolor[gray]{0.3}{Gris Oscuro}\\
-    \textcolor[gray]{0.7}{Gris Claro}
-\end{center}
-
-% Cajas de color
-\subsection{Cajas de color}
-\LaTeX\xspace permite no solo colorear textos, sino que también se pueden realizar cajas con colores de fondo, esta sección muestra los comandos necesarios para implementar cajas coloreadas en un PDF compilado con \LaTeX\xspace.
-\begin{verbatim}
-\colorbox[rgb]{0.5,0.5,1}{caja roja y azul 50\%}
-\colorbox{yellow}{caja de color amarilla}
-\colorbox{cyan}{caja de color cyan}
-\colorbox{green}{caja de color verde}
-\end{verbatim}
-El resultado de implementar dichos colores es el siguiente:
-\begin{center}
-  \colorbox[rgb]{0.5,0.5,1}{caja roja y azul 50\%}
-  \colorbox{yellow}{caja de color amarilla}
-  \colorbox{cyan}{caja de color cyan}
-  \colorbox{green}{caja de color verde}
-\end{center}
-
-% Bordes de color
-\subsection{Bordes de color}
-\LaTeX\xspace también permite crear bordes con distintos colores para una caja, esta sección muestra los comandos necesarios para implementar cajas coloreadas con un borde de color. A la vez es posible especificar un grosor para el borde a colorear utilizando el comando \textbackslash{}setlength\{fboxrule\}\{3 pt\}.
-\begin{verbatim}
-\colorbox[rgb]{0.5,0.5,1}{caja roja y azul 50\%}
-\fcolorbox{red}{yellow}{caja amarilla y borde rojo}
-\setlength{\fboxrule}{3 pt}
-\fcolorbox{red}{cyan}{caja cyan y borde rojo}
-\setlength{\fboxrule}{3 pt}
-\fcolorbox{red}{green}{caja verde y borde rojo}
-\fcolorbox{green}{yellow}{caja amarilla y borde verde}
-\end{verbatim}
-El resultado de implementar dichos colores de bordes en las cajas es el siguiente:
-\begin{center}
-    \colorbox[rgb]{0.5,0.5,1}{caja roja y azul 50\%}\\
-    \fcolorbox{red}{yellow}{caja amarilla y borde rojo}\\
-    \setlength{\fboxrule}{3 pt}
-    \fcolorbox{red}{cyan}{caja cyan y borde rojo}\\
-    \setlength{\fboxrule}{3 pt}
-    \fcolorbox{red}{green}{caja verde y borde rojo} \\
-    \fcolorbox{green}{yellow}{caja amarilla y borde verde}
-\end{center}
-
-\hfill \break
-\hfill \break
-\hfill \break
-
 
 
 
