--- a/tareaCorta2.tex
+++ b/tareaCorta2.tex
@@ -459,6 +459,12 @@
 
 
 \section{Erátostenes y la circunferencia de la tierra}
+\begin{center}
+  \begin{figure}[h!]
+  \includegraphics[width=55mm]{eratostenes1.jpeg}
+  \caption{Eratóstenes. Una pintura de Bernardo Strozzi \emph{Tomado de Google Imágenes}}
+  \end{figure}
+\end{center}
 %*******************************Usos acádemicos extension e importancia*******************************%
 \subsection{Contexto Histórico}
 Eratóstenes fue un académico de la antigua Grecia (276 a.C - 195 a.C) conocido por realizar la primera medición conocida
@@ -507,6 +513,12 @@ determinada por los topográfos reales del gobierno Egipcio, con esto logró det
 de la Tierra en unos 252 000 estadios, lo que es aproximadamente 40.200 Km una cifra bastante cercana a la aceptada en la actualidad de 40.075Km \cite{crease_2014}
 
 \section{Hershey - Chase: Función genética del ADN}
+\begin{center}
+  \begin{figure}[h!]
+  \includegraphics[width=55mm]{hersheyChase.jpg}
+  \caption{Alfred Hershey y Martha Chase \emph{Tomado de Google Imágenes}}
+  \end{figure}
+\end{center}
 \subsection{Contexto Histórico}
 
 A principios del siglo XX se aceptaba que el material genético de las células
@@ -551,9 +563,53 @@ Por esta serie de experimentos Hershey recibe el premio Nobel en 1969.\cite{hern
 \end{center}
   
 
+\section{Luigi Galvani: Electricidad Animal}
 
+\begin{center}
+  \begin{figure}[h!]
+  \includegraphics[width=55mm]{Luigi_Galvani.jpg}
+  \caption{Luigi Galvani\emph{Tomado de Google Imágenes}}
+  \end{figure}
+\end{center}
 
+\subsection{Contexto Histórico}
+A mediados del siglo XVIII, la electricidad era un tema importante y que acaparaba la atención 
+de muchos científicos de la época, debatiendo si la electricidad era un vapor, un fluido o como Benjamín
+Franklin especulaba una serie de partículas.
 
+En Abril de 1786, Luigi Galvani un profesor de anatomía, estuvo experimentando con la estimulación de los nervios
+de las ranas mediante el uso de electricidad usando un generador o aplicando descargas desde una botella de Leyden.
+
+\subsection{El experimento}
+Luigi Galvani creía que los movimientos musculares eran causados por una electricidad natural producida 
+por los seres vivos y que aplicar electricidad de origen artificial tenía el mismo efecto.
+
+Galvani tomó varias ranas y verificó que al cerrar un circuito conectando el nervio con el músculo utilizando algún conductor 
+se producía una reacción que hacía que las patas de las ranas se movieran y sin ninguna fuente externa de energía 
+era fácil pensar que la electricidad estaba almacenada en el interior del animal.
+
+En 1971, publicó sus hallazgos en \emph{Commentary on the Effect of Electricity on Muscular Motion}, donde efectivamente Galvani proponía que 
+los músculos de las ranas funcionaban como una botella de Lynden, almanecenando y liberando algún tipo de electricidad orgánica.
+
+Uno de los grandes detractores de esta teoría fue Alessandro Volta, físico y químico Italiano. Volta aseguraba que el efecto de movimiento en 
+los músculos era provocado por la electricidad provocada al utilizar dos metales conductores, lo que denominó electricidad bimetálica.
+
+Galvani refutó estas afirmaciones demostrando que el mismo efecto podría lograrse usando el mismo metal o incluso carbón para realizar la conexión.
+Volta asumió que esto solamente era efecto de las impurezas del metal que anque fuesen del mismo tipo igual generan alguna 
+cantidad de electricidad bimetálica.
+
+Finalmente Galvani optó por eliminar los metales y conductores de sus experimentos simplemente haciendolo con sus manos y provocando el mismo efecto, incluso haciendo el contacto directamente entre el nervio 
+y el músculo sin ningún conductor involucrado, probando así que la electricidad no provenía de afuera si no dentro del animal mismo.
+
+Volta y Galvani estaban en lo correcto, la electricidad puede ser producida por la reacción de distintos conductores inventando así las baterías. De igual manera
+los experimentos de Galvani probaron que en efecto el movimiento muscular es provocado por una reacción electroquímica y no por una éterea fuerza vital.\cite{johnson_2014}
+
+\begin{center}
+  \begin{figure}[h!]
+  \includegraphics[width=55mm]{frogs.png}
+  \caption{Experimentos de Galvani. \emph{Tomado de Google Imágenes}}
+  \end{figure}
+\end{center}
 %\section{Conclusion}
 %The conclusion goes here.
 
