--- a/tareaCorta2.tex
+++ b/tareaCorta2.tex
@@ -568,7 +568,7 @@ Por esta serie de experimentos Hershey recibe el premio Nobel en 1969.\cite{hern
 \begin{center}
   \begin{figure}[h!]
   \includegraphics[width=55mm]{Luigi_Galvani.jpg}
-  \caption{Luigi Galvani\emph{Tomado de Google Imágenes}}
+  \caption{Luigi Galvani. \emph{Tomado de Google Imágenes}}
   \end{figure}
 \end{center}
 
